--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,11 @@
 
 @layer components {
 	.action-bar {
-		@apply mt-10 inline-flex h-20 items-center gap-2 rounded-xl bg-neutral-950/75 px-6 py-4 text-neutral-200;
+		@apply mt-10 inline-flex h-18 items-center gap-2 rounded-xl bg-neutral-950/75 px-6 py-3 text-neutral-200;
+	}
+
+	.btn {
+		@apply rounded-2xl bg-linear-to-r from-emerald-200 to-emerald-50 px-3 py-1 font-light text-neutral-800 drop-shadow-lg transition-all hover:cursor-pointer hover:from-emerald-300 hover:to-emerald-100 hover:drop-shadow-xl;
 	}
 }
 
